--- a/src/Umbrella/Umbrella.csproj
+++ b/src/Umbrella/Umbrella.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
   <ItemGroup>
     <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
-    <_Parameter1>Umbrella.UnitTests</_Parameter1>
+    <_Parameter1>Umbrella.Tests</_Parameter1>
     </AssemblyAttribute>
   </ItemGroup>
 </Project>
