--- a/src/Umbrella/Umbrella.csproj
+++ b/src/Umbrella/Umbrella.csproj
@@ -3,6 +3,10 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Remove="AnonymousTypeUtils.cs" />
+  </ItemGroup>
   <ItemGroup>
     <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
     <_Parameter1>Umbrella.Tests</_Parameter1>
