--- a/src/Umbrella/Umbrella.csproj
+++ b/src/Umbrella/Umbrella.csproj
@@ -2,6 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Version>1.0.0-alpha</Version>
+    <PackageId>Umbrella.DataTable</PackageId>
+    <Authors>Alfonso Hernandez</Authors>
+    <Company>n\a</Company>
+    <Product>n\a</Product>
+    <Description>Adds the capability of convert an IEnumerable instance to a DataTable.</Description>
   </PropertyGroup>
 
   <ItemGroup>
