--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -1,8 +1,8 @@
 name: Umbrella
 
 on:
-  push:
-    branches: [ master ]
+  # push:
+  #   branches: [ master ]
   pull_request:
     branches: [ master ]
 
@@ -18,4 +18,6 @@ jobs:
       with:
         dotnet-version: 3.1.101
     - name: Build with dotnet
-      run: dotnet build ./src/Umbrella.sln --configuration Release
+      run: dotnet build ./src/Umbrella.sln --configuration Debug
+    - name: Run tests with dotnet
+      run: dotnet test ./src/Umbrela.Tests.csproj --no-build
