--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -1,14 +1,13 @@
 name: Umbrella
 
 on:
-  # push:
-  #   branches: [ master ]
+  push:
+     branches: [ master ]
   pull_request:
     branches: [ master ]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
@@ -17,7 +16,18 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 3.1.101
-    - name: Build with dotnet
+    - name: Build solution
       run: dotnet build ./src/Umbrella.sln --configuration Debug
-    - name: Run tests with dotnet
+    - name: Run tests
       run: dotnet test ./src/Umbrella.Tests/Umbrella.Tests.csproj --no-build
+      
+  publish:
+    runs-on: ubuntu-latest
+    
+    needs: build
+    
+    if: github.ref == 'master'
+    
+    steps:
+      - name: Package project as NuGet package
+        
