--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -7,7 +7,7 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
+  build_and_deploy:
     runs-on: ubuntu-latest
 
     steps:
@@ -17,17 +17,13 @@ jobs:
       with:
         dotnet-version: 3.1.101
     - name: Build solution
-      run: dotnet build ./src/Umbrella.sln --configuration Debug
+      run: dotnet build ./src/Umbrella.sln --configuration Release
     - name: Run tests
       run: dotnet test ./src/Umbrella.Tests/Umbrella.Tests.csproj --no-build
-      
-  publish:
-    runs-on: ubuntu-latest
-    
-    needs: build
-    
-    if: github.ref == 'master'
-    
-    steps:
-      - name: Package project as NuGet package
-        
+    #   if: github.ref == 'master'
+    # - name: Package as NuGet package
+    #   run: dotnet pack ./src/Umbrella/Umbrella.csproj --configuration Release --no-build
+    # - name: Push package to NuGet
+    #   with:
+    #     nuget_api_key: ${{ secrets.NUGET_API_KEY }}
+    #   run: dotnet nuget push '' -k
