--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -7,7 +7,7 @@ on:
     branches: [ master ]
 
 jobs:
-  build_and_deploy:
+  build and deploy:
     runs-on: ubuntu-latest
 
     steps:
@@ -19,7 +19,7 @@ jobs:
     - name: Build solution
       run: dotnet build ./src/Umbrella.sln --configuration Release
     - name: Run tests
-      run: dotnet test ./src/Umbrella.Tests/Umbrella.Tests.csproj --no-build
+      run: dotnet test ./src/Umbrella.Tests/Umbrella.Tests.csproj --configuration Release --no-build 
     #   if: github.ref == 'master'
     # - name: Package as NuGet package
     #   run: dotnet pack ./src/Umbrella/Umbrella.csproj --configuration Release --no-build
