add package and push steps

--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -7,7 +7,7 @@ on:
     branches: [ master ]
 
 jobs:
-  build and deploy:
+  build_and_deploy:
     runs-on: ubuntu-latest
 
     steps:
@@ -20,10 +20,10 @@ jobs:
       run: dotnet build ./src/Umbrella.sln --configuration Release
     - name: Run tests
       run: dotnet test ./src/Umbrella.Tests/Umbrella.Tests.csproj --configuration Release --no-build 
-    #   if: github.ref == 'master'
-    # - name: Package as NuGet package
-    #   run: dotnet pack ./src/Umbrella/Umbrella.csproj --configuration Release --no-build
-    # - name: Push package to NuGet
-    #   with:
-    #     nuget_api_key: ${{ secrets.NUGET_API_KEY }}
-    #   run: dotnet nuget push '' -k
+    - name: Package as NuGet package
+      if: github.ref == 'master'
+      run: dotnet pack ./src/Umbrella/Umbrella.csproj --configuration Release --no-build
+    - name: Push package to NuGet
+      if: github.ref == 'master'
+      run: echo worked
+      #run: dotnet nuget push ./src/Umbrella/*.nupkg -s https://api.nuget.org/v3/index.json -k '{{ secrets.NUGET_API_KEY }}'
