update folders structure

--- a/test/Umbrella.Tests/Umbrella.Tests.csproj
+++ b/test/Umbrella.Tests/Umbrella.Tests.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Umbrella\Umbrella.csproj" />
+    <ProjectReference Include="..\..\src\Umbrella\Umbrella.csproj" />
   </ItemGroup>
 
 </Project>
