Skip pushing the package when already exists in nuget

--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -25,4 +25,4 @@ jobs:
       run: dotnet pack ./src/Umbrella/Umbrella.csproj --configuration Release --no-build -o ./src/Umbrella
     - name: Publish package to NuGet
       if: github.ref == 'refs/heads/master'
-      run: dotnet nuget push ./src/Umbrella/*.nupkg -s https://api.nuget.org/v3/index.json -k ${{ secrets.NUGET_API_KEY }}
+      run: dotnet nuget push ./src/Umbrella/*.nupkg -s https://api.nuget.org/v3/index.json -k ${{ secrets.NUGET_API_KEY }} --skip-duplicate
